Bugfix: dtext sections broken on the wiki pages

--- a/scss/pages/_comments.scss
+++ b/scss/pages/_comments.scss
@@ -67,7 +67,10 @@ div#c-comments div#a-index div.post article.comment img {       // Bugfix: user 
 }
 
 /* --- Comment / Post Features --- */
-.styled-dtext blockquote,                                       // Re-style the quotes and collapsable blocks
+#c-help blockquote,                                             // TODO BUG The wiki is missing the .styled-dtext class, so none of the subsections get styled without this
+#c-help pre,                                                    // But if I just use the base element, the styles get overwritten in the forums and comments
+#c-help div.expandable,
+.styled-dtext blockquote,
 .styled-dtext div.expandable,
 .styled-dtext pre {
     position: relative;
@@ -83,27 +86,9 @@ div#c-comments div#a-index div.post article.comment img {       // Bugfix: user 
     }
 }
 
-div#c-posts div#a-show #artist-commentary {
-    position: relative;
-    z-index: 10;
-    box-shadow: none;
-    border: none;
-    @include themable($data_map: $theme_look_index) { border-radius: themed("border-radius-half"); }
-    @include themable {
-        border-left: 0.25rem solid themed("color-danger");
-        background: rgba( lighten( themed("color-section"), 10%), 0.7);
-    }
-}
-
-blockquote p:last-child { margin-bottom: unset; }
-.styled-dtext div.expandable { padding: unset; }
-.styled-dtext div.expandable div.expandable-header {
-    padding: 0.5rem 1rem;
-}
-.styled-dtext div.expandable div.expandable-content {
-    padding: 0 1rem 1rem;
-}
-
+#c-help blockquote::after,
+#c-help div.expandable::after,
+#c-help pre::after,
 .styled-dtext blockquote::after,
 .styled-dtext div.expandable::after,
 .styled-dtext pre::after {
@@ -120,9 +105,26 @@ blockquote p:last-child { margin-bottom: unset; }
     }
 }
 
-.styled-dtext blockquote {
-    @include themable { border-left-color: themed("color-detail-quote"); }
+div#c-posts div#a-show #artist-commentary {
+    position: relative;
+    z-index: 10;
+    box-shadow: none;
+    border: none;
+    @include themable($data_map: $theme_look_index) { border-radius: themed("border-radius-half"); }
+    @include themable {
+        border-left: 0.25rem solid themed("color-danger");
+        background: rgba( lighten( themed("color-section"), 10%), 0.7);
+    }
 }
+
+// BLOCKQUOTE
+#c-help blockquote,
+.styled-dtext blockquote {
+    @include themable {
+        border-left-color: themed("color-detail-quote");
+    }
+}
+#c-help blockquote::after,
 .styled-dtext blockquote::after {
     content: "\f10e"; // fa-quote-right
     font-size: 2rem;
@@ -130,9 +132,35 @@ blockquote p:last-child { margin-bottom: unset; }
     right: 1rem;
 }
 
-.styled-dtext div.expandable {
-    @include themable {  border-left-color: themed("color-detail-expandable"); }
+#c-help blockquote p:last-child,
+.styled-dtext blockquote p:last-child  {
+    margin-bottom: unset;
 }
+
+// EXPANDABLE
+#c-help div.expandable,
+.styled-dtext div.expandable {
+    padding: unset;
+    @include themable {
+        border-left-color: themed("color-detail-expandable");
+    }
+}
+#c-help div.expandable div.expandable-header,
+.styled-dtext div.expandable div.expandable-header {
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+}
+#c-help div.expandable div.expandable-content,
+.styled-dtext div.expandable div.expandable-content {
+    display: none;
+    padding: 0 1rem 1rem;
+}
+#c-help div.expandable.expanded div.expandable-content,
+.styled-dtext div.expandable.expanded div.expandable-content {
+    display: block;
+}
+
+#c-help div.expandable::after,
 .styled-dtext div.expandable::after {
     content: "\f103";
     font-size: 2.5rem;
@@ -140,9 +168,12 @@ blockquote p:last-child { margin-bottom: unset; }
     right: 1rem;
 }
 
+// CODE
+#c-help pre,
 .styled-dtext pre {
     @include themable { border-left-color: themed("color-detail-code"); }
 }
+#c-help pre::after,
 .styled-dtext pre::after {
     content: "\f121";
     font-size: 1.75rem;
@@ -150,6 +181,7 @@ blockquote p:last-child { margin-bottom: unset; }
     right: 1rem;
 }
 
+// ARTIST COMMENTARY
 div#c-posts div#a-show #artist-commentary {
     @include themable { border-color: themed("color-detail-quote"); }
     padding: unset;
